Refactor colors to be separate type

--- a/wordle.cabal
+++ b/wordle.cabal
@@ -32,7 +32,8 @@ executable wordle
         Modes.Game,
         Modes.Helper,
         Modes.Common,
-        Colors
+        Colors.Colors,
+        Colors.Common
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
