--- a/wordle.cabal
+++ b/wordle.cabal
@@ -45,6 +45,7 @@ executable wordle
     -- other-extensions:
     build-depends:    
         base ^>= 4.17.2.0,
-        random ^>= 1.2.1.2
+        random ^>= 1.2.1.2,
+        parallel ^>= 3.2.2.0
     hs-source-dirs:   src
     default-language: Haskell2010
